--- a/mobile/package.json
+++ b/mobile/package.json
@@ -19,6 +19,7 @@
     "react": "18.3.1",
     "react-native": "0.75.4",
     "react-native-calendar-events": "^2.2.0",
+    "react-native-dotenv": "^3.4.11",
     "react-native-email-link": "^1.16.1",
     "react-native-gesture-handler": "^2.17.1",
     "react-native-linear-gradient": "^2.8.3",
