--- a/mobile/package.json
+++ b/mobile/package.json
@@ -29,6 +29,7 @@
     "react-native-screens": "^3.32.0",
     "react-native-svg": "^15.4.0",
     "react-native-svg-transformer": "^1.5.0",
+    "react-native-tts": "^4.1.1",
     "react-redux": "^9.1.2",
     "redux-saga": "^1.3.0"
   },
