--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-google-signin/google-signin": "^13.1.0",
+    "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
@@ -27,6 +28,7 @@
     "react-native-reanimated": "^3.14.0",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
+    "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-svg": "^15.4.0",
     "react-native-svg-transformer": "^1.5.0",
     "react-native-tts": "^4.1.1",
